# Lielab

./: CITATION.cff  CMakeLists.txt  conanfile.py
.github/workflows/: python_wheels.yml  test_cpp.yml
Lielab/: __release__.hpp  functions.hpp  integrate.hpp  utils.hpp
Lielab/domain/liealgebras/: CompositeAlgebra.cpp  CompositeAlgebra.hpp  LieAlgebra.hpp  LieAlgebra.tpp  cn.cpp  cn.hpp  glc.cpp  glc.hpp  glc.tpp  glr.cpp  glr.hpp  rn.cpp  rn.hpp  rn.tpp  se.cpp  se.hpp  se.tpp  so.cpp  so.hpp  so.tpp  sp.cpp  sp.hpp  sp.tpp  su.cpp  su.hpp  su.tpp
Lielab/domain/liegroups/: CN.cpp  CN.hpp  CN.tpp  CompositeGroup.cpp  CompositeGroup.hpp  GLC.cpp  (+22 more)
Lielab/functions/: Ad.cpp  Ad.hpp  Ad.tpp  Cayley.cpp  Cayley.hpp  Cayley.tpp  Killing.hpp  Killing.tpp  actions.cpp  coAd.hpp  commutator.cpp  commutator.hpp  copair.hpp  derivative.cpp  derivative.hpp  dexp.cpp  dexp.hpp  dexp.tpp  dexpinv.cpp  dexpinv.hpp  dexpinv.tpp  dlog.hpp  dlog.tpp  exp.cpp  exp.hpp  exp.tpp  littlead.cpp  littlead.hpp  littlead.tpp  littlecoad.hpp  littlecoad.tpp  log.cpp  pair.hpp  pair.tpp
Lielab/integrate/: IVPMethods.hpp  solve_ivp.cpp  solve_ivp.hpp
Lielab/utils/: bernoulli.cpp  bernoulli.hpp  eigentools.cpp  eigentools.hpp  eigentools.tpp
python/: pydomain.cpp  pyfunctions.cpp  pyintegrate.cpp  pyproject.toml  pyutils.cpp
python/tests/integrate/: test_Coefficients.py  test_solve_ivp_Euclidean.py  test_solve_ivp_Homogeneous.py  test_solve_ivp_examples.py
tests/integrate/: test_Coefficients.cpp  test_solve_ivp_Euclidean.cpp  test_solve_ivp_Homogeneous.cpp  test_solve_ivp_examples.cpp
(+8 files in other folders)
