[project]
name = "lielab"
version = "0.5.1"
description = "Software for the geometric modeling and numerical analysis of systems, especially those in relation to Lie theory."
authors = [{name="Michael J. Sparapany", email="mjspara@sandia.gov"}]
requires-python = ">=3.8"
dependencies = ["numpy"]
license = "MIT"

[project.urls]
Homepage = "https://github.com/sandialabs/Lielab"

[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.cmake = false # CMake run as a separate process
wheel.platlib = true # Always specify platform and cpython tag
wheel.license-files = ["../LICENSE"]

[project.optional-dependencies]
test = ["pytest", "scipy"]
